--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 *{
     font-family: 'Lato', Verdana, sans-serif !important;
 }
@@ -9,116 +10,12 @@ body {
     margin: 0;
 
 }
-@media (pointer:none), (pointer:coarse) {
-
-    .leftDiv {
-        float: none!important;
-        margin: auto !important;
-        margin-bottom: 10% !important;
-        position: inherit !important;
-    }
-
-    .rightDiv {
-        float: none!important;
-        margin: auto !important;
-
-    }
-    .ruokalanjono {
-        max-width: 90vw !important;
-        min-height: 35vw !important;
-    }
-    .otsikko {
-        max-width: 90vw !important;
-        font-size: 3vw !important;
-    }
-    .ruokalista {
-        max-width: 90vw !important;
-    }
-    .columnh {
-
-        width: 40vw !important;
-    }
-    .thumb {
-        max-width: 3vw !important;
-        max-height: 3vw !important;
-    }
-    .headerC{
-        min-height: 5vh !important;
-    }
-    .img {
-        height: 4.5vh !important;
-
-    }
-    .kampus{
-        font-size: 2vh !important;
-    }
-    .choice{
-        font-size: 1.2vh !important;
-    }
-    h1.choice{
-        font-weight: bold !important;
-
-    }
-    .dropdown{
-        margin: 0vh 1vh !important;
-
-    }
-    .dropdown-content{
-        overflow: scroll !important;
-
-    }
-} /* mobiili näkymä ei kursoria*/
-@media only screen and  (max-width: 900px) {
-    .leftDiv {
-        float: none!important;
-        margin: auto !important;
-        margin-bottom: 10% !important;
-        position: inherit !important;
-    }
-
-    .rightDiv {
-        float: none!important;
-        margin: auto !important;
-
-    }
-    .ruokalanjono {
-        max-width: 90vw !important;
-        min-height: 35vw !important;
-    }
-    .otsikko {
-        max-width: 90vw !important;
-        font-size: 2.5vw !important;
-    }
-    .ruokalista {
-        max-width: 90vw !important;
-    }
-    .columnh {
-
-        width: 40vw !important;
-    }
-    .thumb {
-        max-width: 3vw !important;
-        max-height: 3vw !important;
-    }
-    .headerC{
-        min-height: 5vh !important;
-    }
-    .img {
-        height: 4.5vh !important;
-
-    }
-    .kampus{
-        font-size: 2vh !important;
-    }
-    .choice{
-        font-size: 2.2vh !important;
-
-        margin-top: 0vh !important;
-    }
-    .dropdown{
-        margin: 0vh 1vh !important;
-    }
-} /*  */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    float: left;
+    margin: -1.5vh 1vh;
+}
 
 
 .img {
@@ -135,11 +32,13 @@ body {
     margin-bottom: 1.5vw;
 }
 
-.moi{
+.ruokaLista{
     padding: 1vw;
 }
 .kampus{
-    font-size: 4vh;
+    float: left;
+    margin: 0;
+    font-size: 2.5vw;
     font-weight: bolder !important;
     font-family: 'Lato', Verdana, sans-serif !important;
     color: #646a6d;
@@ -345,47 +244,120 @@ a {
     left: 25vw;
 }
 .choice{
-    padding: 1vw;
     width: 17vw;
+    font-size: 1.5vw;
+    color: #505659;
+    font-weight: bold !important;
+}
 
-}
 .choice:hover {
-   cursor: pointer;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.05);
 }
+
 .parent {
     border-radius: 4px;
     border: 1px solid white;
     background-color: #fd9f1a;
     color: white;
 }
-.dropdown {
-    position: relative;
-    display: inline-block;
-    float: left;
-    margin: -1.5vh 1vh;
-}
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    padding: 9px 4px;
-    z-index: 1;
-    left: 100%;
-}
 .list{
-    display: inline-flex;
+    margin-left: 0vw;
     overflow: scroll;
     max-width: 65vw;
 }
-.dropdown:hover .dropdown-content {
-    display: flex;
-    position: absolute;
-    top: -1vh;
-}
-#canvas{
+
+.canvas{
     position: absolute !important;
     padding: 1vw;
-   width: 100%;
+    width: 100%;
     height: 75%;
+}
+
+@media (pointer:none), (pointer:coarse) {
+
+    .leftDiv {
+        float: none!important;
+        margin: auto !important;
+        margin-bottom: 10% !important;
+        position: inherit !important;
+    }
+
+    .rightDiv {
+        float: none!important;
+        margin: auto !important;
+
+    }
+    .ruokalanjono {
+        max-width: 90vw !important;
+        min-height: 35vw !important;
+    }
+    .otsikko {
+        max-width: 90vw !important;
+        font-size: 3vw !important;
+    }
+    .ruokalista {
+        max-width: 90vw !important;
+    }
+    .columnh {
+
+        width: 40vw !important;
+    }
+    .thumb {
+        max-width: 3vw !important;
+        max-height: 3vw !important;
+    }
+    .img {
+        float: left;
+
+    }
+    .kampus{
+        font-size: 2.5vw !important;
+        float: left;
+        margin: 0;
+        font-weight: bolder !important;
+        font-family: 'Lato', Verdana, sans-serif !important;
+        color: #646a6d;
+    }
+
+} /* mobiili näkymä ei kursoria*/
+@media only screen and  (max-width: 900px) {
+    .leftDiv {
+        float: none!important;
+        margin: auto !important;
+        margin-bottom: 10% !important;
+        position: inherit !important;
+    }
+
+    .rightDiv {
+        float: none!important;
+        margin: auto !important;
+
+    }
+    .ruokalanjono {
+        max-width: 90vw !important;
+        min-height: 35vw !important;
+    }
+    .otsikko {
+        max-width: 90vw !important;
+        font-size: 2.5vw !important;
+    }
+    .ruokalista {
+        max-width: 90vw !important;
+    }
+    .columnh {
+
+        width: 40vw !important;
+    }
+    .thumb {
+        max-width: 3vw !important;
+        max-height: 3vw !important;
+    }
+    .canvas{
+        position: absolute !important;
+        padding: 1vw;
+        width: 90vw;
+        height: 52vw;
+    }
 }
